--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -85,6 +85,7 @@
                             <span show.bind="false">${user_editing}</span>
                             <multi-select 
                                 options.bind="topic_list" 
+                                categor.bind="topic"
                                 place_holder_text="photos.click-topic"
                                 selected_options.bind="params.selected_topics" height.bind="220"
                                 settings.bind="options_settings" 
