--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -72,6 +72,7 @@
                                             position="${theme.is_desktop ? 'bottom' : 'right'}"
                                             style="position:absolute;left:2px;top:2px;"></help>
                                         <multi-select options.bind="topic_list"
+                                            category="topic"
                                             selected_options.bind="params.selected_topics"
                                             first_time.bind="no_topics_yet" option_groups.bind="topic_groups"
                                             new-name.delegate="add_topic($event)" settings.bind="options_settings"
@@ -83,6 +84,7 @@
                                         <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">
                                             ${'photos.photographers' & t}</div>
                                         <multi-select options.bind="photographer_list"
+                                            category="photographer"
                                             place_holder_text="photos.click-photographer"
                                             selected_options.bind="params.selected_photographers"
                                             settings.bind="photographers_settings"
