--- a/src/groups/user-info.html
+++ b/src/groups/user-info.html
@@ -68,7 +68,7 @@
                                 value.bind="status_record.photo_info.photo_story" id="photo-story" name="photo-story">
                             </textarea>
                         </div>
-                        <div if.bind="status_record.photo_uploaded" >
+                        <div if.bind="status_record.photo_uploaded" style="width:242px;">
                             <div style="margin-top: 0px;margin-bottom:2px;">
                                 ${'stories.categories' & t}
                             </div>
