--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -74,7 +74,7 @@
         </div>
         <div>
             <span if.bind="! user.editing" class="full-size-photo-info ${theme.rtltr}"
-                css="width:${Math.max(slide[slide.side].width)}px;">
+                css="width:${Math.max(slide[slide.side].width)}px;display:flex;align-items:center;justify-content:flex-start;">
                 <span class="photo-info-names">
                     ${photo_info.name}.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;${'photos.photographer' &
                     t}:&nbsp;${photo_info.photographer}.
