--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -57,6 +57,7 @@
                     repeat.for="option of options | filter: filter : 'name' | filterBySet : selected_options_set : 'exclude' : 'name' | take : 999 | spy : agent">
                     <div class="option-item"
                         contextmenu.delegate="edit_option_dialog(option, $event)"
+                        aubs-popover="body.bind:option.description;position:right;disabled.bind:!option.description"
                         css="margin:0;padding:0;padding-right:${(option.level || 0) * 16 + 2}px;width:${inner_width}px"
                         if.bind="option.topic_kind > 0 || user.editing">
                         <i if.bind="option.topic_kind==1 && ! option.expanded" click.delegate="expand(option)"
