--- a/src/groups/groups-manager.html
+++ b/src/groups/groups-manager.html
@@ -1,104 +1,143 @@
 <template>
     <require from="../admin/admin.css"></require>
-    <div style="height:95%;margin-top:0px;direction:ltr" dir="ltr">
-        <div style="width:400px;margin-left:auto;margin-right:auto">
-            <h3 class="center">${'groups.groups-manager' & t}</h3>
+    <div style="height:95%;margin-top:0px;direction:ltr;margin-left:auto;margin-right:auto;" dir="ltr">
+        <div style="width:400px;margin-left:auto;margin-right:auto;">
+            <h3 class="center" style="margin-left:auto;margin-right:auto;">${'groups.groups-manager' & t}</h3>
         </div>
-        <div style="height:730px;width:1200px;margin-left:auto;margin-right:auto;overflow:auto;">
-            <div class="form-inline">
-                <div class="form-group">
-                    <a href class="btn btn-primary" click.delegate="add_or_update(null)" style="margin-bottom:1em;">
-                        ${'groups.add-group' & t}
-                    </a>
+        <div style="display:flex;margin-left:auto;margin-right:auto;width:1200px;">
+            <div style="height:730px;width:700px;overflow:auto;">
+                <div class="form-inline">
+                    <div class="form-group">
+                        <a href class="btn btn-primary" click.delegate="add_or_update_group(null)"
+                            style="margin-bottom:1em;">
+                            ${'groups.add-group' & t}
+                        </a>
+                    </div>
+                    <div class="form-group" style="margin-bottom:14px;">
+                        <input type="text" value.bind="filters[0].value" placeholder="${'groups.enter-filter-text' & t}"
+                            class="form-control" />
+                    </div>
                 </div>
-                <div class="form-group" style="margin-bottom:14px;">
-                    <input type="text" value.bind="filters[0].value" placeholder="${'groups.enter-filter-text' & t}"
-                        class="form-control" />
-                </div>
-            </div>
-            <table class="table table-striped"
-                aurelia-table="data.bind: group_list; display-data.bind: $displayData; 
-                current-page.bind: currentPage; page-size.bind: pageSize; total-items.bind: totalItems;filters.bind:filters;">
-                <thead>
-                    <tr>
-                        <th aut-sort="key: id">ID</th>
-                        <th aut-sort="key: email">${'groups.title' & t}</th>
-                        <th aut-sort="key: first_name">${'groups.description' & t}</th>
-                        <th>${'groups.logo' & t}</th>
-                        <!--<th>Created></th>-->
-                        <th>${'groups.edit' & t}</th>
-                        <th>${'groups.delete' & t}</th>
-                        <th>${'groups.link' & t}</th>
-                        <th>${'groups.send-email' & t}</th>
-                    </tr>
-                </thead>
-                <tbody style="height:600px;overflow:auto;">
-                    <tr repeat.for="item of $displayData">
-                        <td>${item.id}</td>
-                        <td>${item.title}</td>
-                        <td>${item.description}</td>
-                        <td style="margin:0;padding:0;">
-                            <form class="form-inline" submit.delegate="upload_logo(item)">
-                                <div class="form-group">
-                                    <label for="logo-image-${item.id}" style="margin:0;">
-                                        <img width="32" src.bind="item.logo_url" style="padding:0;cursor:pointer;" />
-                                    </label>
-                                    <input style="display:none" type="file" id="logo-image-${item.id}" accept="image/*"
-                                        files.bind="item.logo_images">
-                                </div>
-                                <div class="form-group" if.bind="item.logo_images">
-                                    <button type="submit">
-                                        ${'groups.upload-logo' & t}
-                                    </button>
-                            </form>
-                        </td>
-                        <!--<td>${item.created}</td>-->
-                        <td class="center">
-                            <a href click.delegate="add_or_update(item)">
-                                <i class="fas fa-pencil" title="Edit group Data"></i>
-                            </a>
-                        </td>
-                        <td class="center">
-                            <a href title="Delete" click.delegate="delete_group(item)">
-                                <i class="far fa-trash"></i>
-                            </a>
-                        </td>
-                        <td class="center">
-                            <a href title="Copy link" click.delegate="copy_link(item)">
-                                <i class="far fa-link"></i>
-                            </a>
-                        </td>
-                        <td class="center">
-                            <a class="resp-sharing-button__link"
-                                href="mailto:?subject=${item.title}&body=${item.mail_url}" target="_blank"
-                                rel="noopener">
-                                <i class="far fa-envelope"></i>
-                            </a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                <table class="table table-striped"
+                    aurelia-table="data.bind: group_list; display-data.bind: $displayData; 
+                    current-page.bind: currentPage; page-size.bind: pageSize; total-items.bind: totalItems;filters.bind:filters;">
+                    <thead>
+                        <tr>
+                            <th aut-sort="key: id">ID</th>
+                            <th aut-sort="key: email">${'groups.title' & t}</th>
+                            <th aut-sort="key: first_name">${'groups.description' & t}</th>
+                            <th>${'groups.logo' & t}</th>
+                            <!--<th>Created></th>-->
+                            <th>${'groups.edit' & t}</th>
+                            <th>${'groups.delete' & t}</th>
+                            <th>${'groups.link' & t}</th>
+                            <th>${'groups.send-email' & t}</th>
+                            <th>${'groups.contacts' & t}</th>
+                        </tr>
+                    </thead>
+                    <tbody style="height:600px;overflow:auto;">
+                        <tr repeat.for="item of $displayData">
+                            <td>${item.id}</td>
+                            <td>${item.title}</td>
+                            <td>${item.description}</td>
+                            <td style="margin:0;padding:0;">
+                                <form class="form-inline" submit.delegate="upload_logo(item)">
+                                    <div class="form-group">
+                                        <label for="logo-image-${item.id}" style="margin:0;">
+                                            <img width="32" src.bind="item.logo_url"
+                                                style="padding:0;cursor:pointer;" />
+                                        </label>
+                                        <input style="display:none" type="file" id="logo-image-${item.id}"
+                                            accept="image/*" files.bind="item.logo_images">
+                                    </div>
+                                    <div class="form-group" if.bind="item.logo_images">
+                                        <button type="submit">
+                                            ${'groups.upload-logo' & t}
+                                        </button>
+                                </form>
+                            </td>
+                            <!--<td>${item.created}</td>-->
+                            <td class="center">
+                                <a href click.delegate="add_or_update_group(item)">
+                                    <i class="fas fa-pencil" title="Edit group Data"></i>
+                                </a>
+                            </td>
+                            <td class="center">
+                                <a href title="Delete" click.delegate="delete_group(item)">
+                                    <i class="far fa-trash"></i>
+                                </a>
+                            </td>
+                            <td class="center">
+                                <a href title="Copy link" click.delegate="copy_link(item)">
+                                    <i class="far fa-link"></i>
+                                </a>
+                            </td>
+                            <td class="center">
+                                <a class="resp-sharing-button__link"
+                                    href="mailto:?subject=${item.title}&body=${item.mail_url}" target="_blank"
+                                    rel="noopener">
+                                    <i class="far fa-envelope"></i>
+                                </a>
+                            </td>
+                            <td class="center">
+                                <a href title="show contacts" click.delegate="expose_contacts(item)">
+                                    <i class="far fa-address-book"></i>
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
 
-            <div class="row" style="margin-right:0;">
-                <div class="col-md-9">
-                    <aut-pagination current-page.bind="currentPage" page-size.bind="pageSize"
-                        total-items.bind="totalItems" pagination-size.bind="15" boundary-links.bind="true">
-                    </aut-pagination>
-                </div>
+                <div class="row" style="margin-right:0;">
+                    <div class="col-md-9">
+                        <aut-pagination current-page.bind="currentPage" page-size.bind="pageSize"
+                            total-items.bind="totalItems" pagination-size.bind="15" boundary-links.bind="true">
+                        </aut-pagination>
+                    </div>
 
-                <div class="col-md-3">
-                    <div class="form-inline">
-                        <div class="form-group pull-right">
-                            <label for="pageSize">Page Size: </label>
-                            <select value.bind="pageSize" id="pageSize" class="form-control">
-                                <option model.bind="5">5</option>
-                                <option model.bind="10">10</option>
-                                <option model.bind="15">15</option>
-                                <option model.bind="50">50</option>
-                            </select>
+                    <div class="col-md-3">
+                        <div class="form-inline">
+                            <div class="form-group pull-right">
+                                <label for="pageSize">Page Size: </label>
+                                <select value.bind="pageSize" id="pageSize" class="form-control">
+                                    <option model.bind="5">5</option>
+                                    <option model.bind="10">10</option>
+                                    <option model.bind="15">15</option>
+                                    <option model.bind="50">50</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div style="width:300px;height:600px;margin-left:12px;background-color:lightblue;margin-top:8px;"
+                if.bind="curr_group_id">
+                <button type="button" class="btn btn-info" click.delegate="mail_contacts()" style="width:100%;background-color:orange;">${'groups.mail-contacts' & t}</button>
+                <div class="form-inline" style="display:flex;justify-content:space-between;padding: 8px;">
+                    <div class="form-group">
+                        <a href class="btn btn-primary" click.delegate="add_or_update_contact(null)"
+                            style="margin-bottom:1em;">
+                            ${'groups.add-contact' & t}
+                        </a>
+                    </div>
+                    <div class="form-group">
+                        <span style="font-size:150%;">${'groups.contacts' & t}</span>
+                    </div>
+                </div>
+                <ul style="padding:0">
+                    <li repeat.for="contact of contact_list" 
+                        if.bind="curr_group_id==contact.group_id"
+                        style="border-bottom:solid 4px white;padding:5px;display:flex;justify-content:space-between;">
+                        <span>
+                            ${contact.email}  
+                        </span>
+                        <span>
+                            ${contact.first_name} ${contact.last_name}
+                            <i class="fa fa-pencil" style="cursor:pointer;" click.delegate="add_or_update_contact(contact)"></i>
+                        </span>
+                    </li>
+
+                </ul>
             </div>
         </div>
     </div>
