photos name filter. group letter. wip.

--- a/src/groups/groups-manager.html
+++ b/src/groups/groups-manager.html
@@ -8,7 +8,7 @@
             <div style="height:730px;width:700px;overflow:auto;">
                 <div class="form-inline">
                     <div class="form-group">
-                        <a href class="btn btn-primary" click.delegate="add_or_update_group(null)"
+                        <a href class="btn btn-success" click.delegate="add_or_update_group(null)"
                             style="margin-bottom:1em;">
                             ${'groups.add-group' & t}
                         </a>
@@ -16,6 +16,12 @@
                     <div class="form-group" style="margin-bottom:14px;">
                         <input type="text" value.bind="filters[0].value" placeholder="${'groups.enter-filter-text' & t}"
                             class="form-control" />
+                    </div>
+                    <div class="form-group" if.bind="user.privileges.DEVELOPER">
+                        <a href class="btn btn-primary" click.delegate="edit_letter()"
+                            style="margin-bottom:1em;">
+                            ${'groups.edit-letter' & t}
+                        </a>
                     </div>
                 </div>
                 <table class="table table-striped"
@@ -112,10 +118,11 @@
             </div>
             <div style="width:300px;height:600px;margin-left:12px;background-color:lightblue;margin-top:8px;"
                 if.bind="curr_group_id">
-                <button type="button" class="btn btn-info" click.delegate="mail_contacts()" style="width:100%;background-color:orange;">${'groups.mail-contacts' & t}</button>
+                <button type="button" class="btn btn-primary" click.delegate="mail_contacts()"
+                    style="width:100%;">${'groups.mail-contacts' & t}</button>
                 <div class="form-inline" style="display:flex;justify-content:space-between;padding: 8px;">
                     <div class="form-group">
-                        <a href class="btn btn-primary" click.delegate="add_or_update_contact(null)"
+                        <a href class="btn btn-success" click.delegate="add_or_update_contact(null)"
                             style="margin-bottom:1em;">
                             ${'groups.add-contact' & t}
                         </a>
@@ -125,15 +132,15 @@
                     </div>
                 </div>
                 <ul style="padding:0">
-                    <li repeat.for="contact of contact_list" 
-                        if.bind="curr_group_id==contact.group_id"
+                    <li repeat.for="contact of contact_list" if.bind="curr_group_id==contact.group_id"
                         style="border-bottom:solid 4px white;padding:5px;display:flex;justify-content:space-between;">
                         <span>
-                            ${contact.email}  
+                            ${contact.email}
                         </span>
                         <span>
                             ${contact.first_name} ${contact.last_name}
-                            <i class="fa fa-pencil" style="cursor:pointer;" click.delegate="add_or_update_contact(contact)"></i>
+                            <i class="fa fa-pencil" style="cursor:pointer;"
+                                click.delegate="add_or_update_contact(contact)"></i>
                         </span>
                     </li>
 
