--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -13,7 +13,7 @@
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;padding-right:15px;">
                         <form style="display:flex;height:34px;">
-                            <div class="input-group" if.bind="user.privileges.ADVANCED && params.selected_order_option == 'random-order'">
+                            <div class="input-group" if.bind="user.privileges.ADVANCED">
                                 <search-input value.bind="filter" placeholder="photos.filter" height="32"></search-input>
                             </div>
                             <div class="input-group" if.bind="user.privileges.EDITOR" style="width:144px;">
@@ -131,7 +131,7 @@
                         if.bind="!editing_filters">
                         <div css="width:${photo_size}px;height:${photo_size}px;"
                             class="${photo.photo_id==curr_photo_id ? 'current-photo' : ''}"
-                            repeat.for="photo of photo_list | filter : filter : '*selected' : 'name' : original_file_name | take : 9999">
+                            repeat.for="photo of photo_list | filter : filter : '*selected' : 'name' : 'original_file_name' | take : 9999">
                             <a style="position:relative;width:100%" click.delegate="maximize_photo(photo, $event, $index)" tapandhold="500" longtouch.delegate="toggle_selection(photo)" 
                                 class.bind="photo.selected" >
                                 <info css="position:absolute;top:${7 - photo_size / 2}px;left:${photo_size-20}px;"
