--- a/src/groups/groups-manager.html
+++ b/src/groups/groups-manager.html
@@ -17,7 +17,7 @@
                             class="form-control" />
                     </div>
                     <div class="form-group">
-                        <letter topic="invitation-to-contribute"></letter>
+                        <letter topic="invitation-to-contribute" button_text.bind="button_text" params.bind="mail_params"></letter>
                     </div>
                 </div>
                 <table class="table table-striped"
