--- a/src/resources/elements/letter.html
+++ b/src/resources/elements/letter.html
@@ -1,6 +1,6 @@
 <template>
     <button class="btn btn-info"
         click.delegate="edit_letter($event)">
-        Edit letter
+        ${button_text & t}
     </button>
 </template>
