--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -68,7 +68,7 @@
                     <div class="fr-view" dir="${story_dir}">
                         <div class="big-story-panel ${theme.font_size}" style="position:relative;">
                             <p class="${story_dir} ${highlight_on}"> 
-                                <compose if.bind="story.story_text" view-model='./render-story' model.bind="highlightedHtml"></compose>
+                                <compose if.bind="story.story_text" view-model='./render-story' model.bind="{html:highlightedHtml}"></compose>
                                 <div class="page-control next" click.trigger="next_page($event, +1)"></div>
                                 <div class="page-control prev" click.trigger="next_page($event, -1)"></div>
                             </p>
