--- a/src/stories/story_window.html
+++ b/src/stories/story_window.html
@@ -37,7 +37,7 @@
                         iconsTemplate: 'font_awesome_5',
                         toolbarButtons: ['undo', 'redo', '|', 'bold', 'italic', 'underline', '|', 'insertLink', 'insertImage', 'insertVideo', '|',
                                 'color', 'fontSize', 'align', 'html'],
-                        fontSize: ['8', '10', '12', '13', '14', '15', '16', '18', '36', '48', '60', '72', '96'],
+                        fontSize: ['8', '10', '12', '13', '14', '15', '16', '18', '20', '24', '32', '36', '48', '60', '72', '96'],
                         imageDefaultDisplay: 'inline',
                         imageDefaultAlign: 'right',
                         imageDefaultWidth: 100,
