--- a/src/groups/groups-manager.html
+++ b/src/groups/groups-manager.html
@@ -17,7 +17,7 @@
                             class="form-control" />
                     </div>
                     <div class="form-group">
-                        <letter topic="invitation-to-contribute" button_text.bind="button_text" params.bind="mail_params"></letter>
+                        <letter topic="invitation-to-contribute" mail_body.bind="mail_body" button_text.bind="button_text" params.bind="mail_params"></letter>
                     </div>
                 </div>
                 <table class="table table-striped"
@@ -114,7 +114,8 @@
             </div>
             <div style="width:300px;height:80vh;margin-left:12px;background-color:lightblue;margin-top:8px;"
                 if.bind="curr_group_id">
-                <button type="button" class="btn btn-primary" click.delegate="mail_contacts()"
+                <button type="button" class="btn btn-primary ${mail_body ? '' : 'disabled'}" click.delegate="mail_contacts()"
+                    aubs-tooltip="text.bind:need_to_show;position:top;disabled.bind:mail_body;"
                     style="width:100%;">${'groups.mail-contacts' & t}</button>
                 <div class="form-inline" style="display:flex;justify-content:space-between;padding: 8px;">
                     <div class="form-group">
