suggest adding only while editing

--- a/src/members/member-picker.html
+++ b/src/members/member-picker.html
@@ -17,7 +17,7 @@
             </div>
             <div>
                 <div class="input-group">
-                    <input dir="rtl" type="search" class="form-control" t="[placeholder]members.filter" value.bind="filter & debounce" style="float:right;width:350px;">
+                    <input dir="rtl" type="search" class="form-control" placeholder.bind="place_holder" value.bind="filter & debounce" style="float:right;width:350px;">
                 </div>
             </div>
         </div>
