--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -2,7 +2,7 @@
     <div id="member-detail" class="content-area" ref="member_detail_container">
         <div class="row" ref="member_header">
             <div id="breadcrumb" class="col-xs-12 font-size-150 detail-header" dir="${theme.rtltr}">
-                <i class="far fa-share pull-left" style="cursor:pointer;" data-role="button" t="[title]go-back" click.trigger="go_back()" if.bind="theme.is_desktop"></i>
+                <i class="far fa-arrow-up pull-left" style="cursor:pointer;" data-role="button" t="[title]go-back" click.trigger="go_back()" if.bind="theme.is_desktop"></i>
                 <span if.bind="member.member_info.id">${member_display_name}</span>
                 <span if.bind="! member.member_info.id">${new_member}</span>
                 <span style="color:white;font-size:85%;margin-right:30px;"> ${life_cycle_text} </span>
