--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -147,6 +147,8 @@
                     click.trigger="save_help_messages()">Save help messages</a></li>
             <li if.bind="user.privileges.HELP_AUTHOR"><a class="dropdown-item" href="#"
                     click.trigger="load_help_messages()">Load help messages</a></li>
+            <li if.bind="user.privileges.HELP_AUTHOR"><a class="dropdown-item" href="#"
+                    click.trigger="print_help_messages()">Print help messages</a></li>
             <li if.bind="user.privileges.HELP_AUTHOR" class="divider"></li>
             <li if.bind="user.privileges.DEVELOPER"><a class="dropdown-item" href="#"
                     click.trigger="reindex_words()">Reindex Words</a></li>
