--- a/src/resources/elements/chats/chatroom.html
+++ b/src/resources/elements/chats/chatroom.html
@@ -1,5 +1,5 @@
 <template>
-    <div css="background-color: lightgray;height:${theme.height-129}px" class="chatroom">
+    <div css="background-color: lightgray;height:${theme.height-129}px" class="chatroom ${theme.rtltr}">
         <div style="padding:16px;">
             <div style="display:flex;justify-content:space-between;align-items:flex-start;">
                 <div css="float:${theme.same_dir};direction:${theme.rtltr};" if.bind="!editing">
